# odx

./: .gitignore  CONTRIBUTING.md  README.md  SPEC.md  odx_cli.py  pyproject.toml
.github/workflows/: test.yml
converters/: pdf_to_odx.py
docs/: getting-started.md
docs/examples/: odx_viewer_demo.html
lotto2/: CONTRIBUTING.md  pyproject.toml  sample.odx  test.yml
odx_renderer/: render_html.py
odxlib/: __init__.py
odxlib/ocr/: engines.py  pipeline.py  preprocess.py
tests/: test_readwrite.py
tests/fixtures/: sample.odx
