[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "odx"
version = "0.1.0"
description = "Open Document eXtended Core Library"
readme = "README.md"
authors = [{ name = "Marco Razzano" }]
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
compress = ["zstandard"]
pdf = ["PyMuPDF", "pdfplumber"]
ocr = ["opencv-python", "numpy", "pytesseract", "easyocr", "transformers", "torch"]
dev = ["pytest"]
all = ["odx[compress,pdf,ocr]"]
